<package>
  <name>dlut_viso2</name>
  <version>0.0.1</version>
  <description>
    This package developed from viso2_ros and libviso2.
  </description>
  
  <license>GPL</license>

  <url type="website">http://ros.org/wiki/dlut_viso2</url>


  <maintainer email="zhuang@dlut.edu.cn">Zhuang Yan</maintainer>
  <maintainer email="wunailiang@gmail.com">Wu Nai Liang</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dlut_libvo</run_depend>
  <run_depend>dlut_viso2_ros</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
