<package>
  <name>dlut_viso2_ros</name>
  <version>0.0.1</version>
  <description>This package developed from viso2_ros and libviso2</description>

  <url type="website">http://ros.org/wiki/dlut_vision</url>
  <url type="repository">https://github.com/ZhuangYanDLUT/dlut_vision.git</url>

  <author email="zhuang@dlut.edu.cn">Zhuang Yan</author>
  <author>Yan Fei</author>
  <author>Wu Nai Liang</author>

  <maintainer email="zhuang@dlut.edu.cn">Zhuang Yan</maintainer>
  <maintainer email="wunailiang@gmail.com">Wu Nai Liang</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dlut_libvo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend> 
  <build_depend>message_filters</build_depend> 
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_geometry</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>PCL</build_depend>
  <build_depend>pcl_ros</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>message_generation</build_depend> 
  
  <run_depend>dlut_libvo</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend> 
  <run_depend>tf</run_depend>
  <run_depend>PCL</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
